fixed gap on gallery

--- a/src/Components/DisplayArea/Gallery/Gallery.scss
+++ b/src/Components/DisplayArea/Gallery/Gallery.scss
@@ -49,6 +49,7 @@
         &__image {
             width: 300px;
             height: 250px;
+            margin: 20px 0px;
             transition: .3s;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             border-radius: 20px;
